# langgraph-course

./: .gitignore  pyproject.toml
content-course/: conditional_graphs.ipynb  create_react_agent_example.ipynb  hello_world.ipynb  looping_graphs.ipynb  sequential_graphs.ipynb  structured_outputs.ipynb
projeto0/: langgraph_basics.ipynb  langgraph_with_tools.ipynb
projeto0/studio/: langgraph.json  requirements.txt
projeto0/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
projeto0/studio/simple_agent/: agent.py
projeto0/studio/web_search_agent/: agent.py
