[project]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Medeiro",email = "r.medeiro10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-groq (>=0.3.8,<0.4.0)",
    "langgraph-cli (>=0.4.2,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "playwright (>=1.55.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "lxml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
