[project]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Medeiro",email = "r.medeiro10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.6.8,<0.7.0)",
    "langchain-community (>=0.3.30,<0.4.0)",
    "langchain-groq (>=0.3.8,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain-tavily (>=0.2.12,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
