[project]
name = "langgraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Ramon Medeiro",email = "r.medeiro10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.0.2,<2.0.0)",
    "langchain-groq (>=1.0.0,<2.0.0)",
    "tavily-python (>=0.7.12,<0.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
